Bug 320357. Linux magnifier can't work with wrapped text. r=ginn.chen